// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "sxFXmGsIqCCG8Dv7KxQxiylMrHk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                  ],
                  "hash": "OzYoobNX1XCpcFrvvtsD00f4Rwg=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "wY04boJNTF8dJfMNvOyynSldkew=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "cyiSAzblslLaM9FtFOxZflhDW5E=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "celgq3+aR0rWl5L3cCnvB/wg6ls=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "+EqOJseh9+e5yVTE1i5bS9BG/ms=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "LmpvBcWDFucSuSelmGPGV2CbfT4=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "vcH6mooRTrUP1gXBg73A7jMxcQ4=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "GZbp4aQmlZ+LDLDU/j1F974nCzA=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "sxFXmGsIqCCG8Dv7KxQxiylMrHk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "QQAHkMGSBEeOaZ5qYjjIr+zOUbY=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "tS25lkQb7dlQXKxuykh6R0/CIPo=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "Zd4hjEzrsZbYZVpDMlMpAGTqMoI=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "TFFtQafsjUg0xBQy7P8u6++zEtY=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "b/BkbtHcscOMEotSvidtO33RM3E=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "u+hT3vtKy3N9mBx/6VrqFEs42u4=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "n79yzv8n1rlYIJeEAO8/EI8wVmE=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "sxFXmGsIqCCG8Dv7KxQxiylMrHk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "lSG1H3xgJIqMOy0NwwG1m9dYn3I=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "YZICfNAhO7c4mopg1lRMvtn4zoc=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "GPCobV/2HmZJ0cpyuZQf9TQeVf8=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "ZgLmQTXlEACS/14jf2Jyndfa87U=",
              "name": "valid-component-name",
            },
          ],
          "hash": "poM/uHcOQlDOzK+IEaJzJayYv7o=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "TYmAxNZtqQ+FOtKOwWhCKtKcFfU=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "EojWGlvT4tQz1P+sLSS7TRz9aSg=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "sxFXmGsIqCCG8Dv7KxQxiylMrHk=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "cXZwMQJvDsDgoyTJi4o17HWylh0=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "5oFqFve0WaOV3g/ptfVo98a5B4Q=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "65UuO8iiPnNRHZur5KT+HoQqFCw=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "W6qA00PvelAoN3+eEPqerk8f8h0=",
              "name": "sample-component",
            },
          ],
          "hash": "vaISugVY/zW/SpY4JlSj6lKW5OI=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "r839gQzdOf647+4Oo9ayY36AEak=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "HvlKOMNWhLM9m0OnbTo5djFr8a4=",
  "name": "no-args",
}
`;
